--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-PORT = 3001
-ATLAS_URI = mongodb+srv://root:root@cluster0.ydg8q.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+PORT = "3001"
+ATLAS_URI = "mongodb+srv://root:root@cluster0.ydg8q.mongodb.net/iPalette_dev?retryWrites=true&w=majority"
