--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "@types/cors": "^2.8.12",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.5",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^16.11.6",
     "bcrypt": "^5.0.1",
@@ -16,6 +17,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.13.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.4"
